specify root credentials and kafka broker in config secret

--- a/ubuntu-utm-vms/guest/helm-values/minio-tenant.yaml
+++ b/ubuntu-utm-vms/guest/helm-values/minio-tenant.yaml
@@ -88,10 +88,10 @@ tenant:
   #    accessKey: minio
   #    secretKey: minio123
   #
-  configSecret:
-    name: myminio-root
-    accessKey: minio
-    secretKey: minio123
+  # configSecret:
+  #  name: myminio-root
+  #  accessKey: minio
+  #  secretKey: minio123
     #existingSecret: true
 
   ###
