--- a/ubuntu-utm-vms/guest/helm-values/vault.yaml
+++ b/ubuntu-utm-vms/guest/helm-values/vault.yaml
@@ -440,10 +440,10 @@ server:
     #       name: ssl-redirect
     #       port:
     #         number: use-annotation
-    tls: []
-    #  - secretName: chart-example-tls
-    #    hosts:
-    #      - chart-example.local
+    tls: 
+      - secretName: vault-ha-tls
+        hosts:
+          - chart-example.local
 
   # hostAliases is a list of aliases to be added to /etc/hosts. Specified as a YAML list.
   hostAliases: []
@@ -594,7 +594,6 @@ server:
   # The purpose is to make it easy to share volumes between containers.
   volumes:
     - name: userconfig-vault-ha-tls
-      class: openebs-lvmpv
       secret:
         defaultMode: 420
         secretName: vault-ha-tls
@@ -775,7 +774,7 @@ server:
     mountPath: "/vault/data"
     # Name of the storage class to use.  If null it will use the
     # configured default Storage Class.
-    storageClass: openebs-lvmpv
+    storageClass: openebs-lvm
     # Access Mode of the storage device being used for the PVC
     accessMode: ReadWriteOnce
     # Annotations to apply to the PVC
@@ -804,7 +803,7 @@ server:
     mountPath: "/vault/audit"
     # Name of the storage class to use.  If null it will use the
     # configured default Storage Class.
-    storageClass: openebs-lvmpv
+    storageClass: openebs-lvm
     # Access Mode of the storage device being used for the PVC
     accessMode: ReadWriteOnce
     # Annotations to apply to the PVC
@@ -932,7 +931,7 @@ ui:
   # serviceType can be used to control the type of service created. For
   # example, setting this to "LoadBalancer" will create an external load
   # balancer (for supported K8S installations) to access the UI.
-  enabled: false
+  enabled: true
   publishNotReadyAddresses: true
   # The service should only contain selectors for active Vault pod
   activeVaultPodOnly: false
@@ -983,7 +982,7 @@ csi:
   # With the driver and provider installed, you can mount Vault secrets into volumes
   # similar to the Vault Agent injector, and you can also sync those secrets into
   # Kubernetes secrets.
-  enabled: false
+  enabled: true
 
   image:
     repository: "hashicorp/vault-csi-provider"
@@ -993,18 +992,18 @@ csi:
   # volumes is a list of volumes made available to all containers. These are rendered
   # via toYaml rather than pre-processed like the extraVolumes value.
   # The purpose is to make it easy to share volumes between containers.
-  volumes: null
-  # - name: tls
-  #   secret:
-  #     secretName: vault-tls
+  volumes:
+    - name: tls
+      secret:
+        secretName: vault-ha-tls
 
   # volumeMounts is a list of volumeMounts for the main server container. These are rendered
   # via toYaml rather than pre-processed like the extraVolumes value.
   # The purpose is to make it easy to share volumes between containers.
-  volumeMounts: null
-  # - name: tls
-  #   mountPath: "/vault/tls"
-  #   readOnly: true
+  volumeMounts:
+    - name: tls
+      mountPath: "/vault/tls"
+      readOnly: true
 
   resources: {}
   # resources:
