--- a/ubuntu-utm-vms/guest/manifests/static/lvm-sc.yaml
+++ b/ubuntu-utm-vms/guest/manifests/static/lvm-sc.yaml
@@ -1,8 +1,9 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: openebs-lvmpv
+  name: openebs-lvm
 parameters:
   storage: "lvm"
   volgroup: "app-data"
 provisioner: local.csi.openebs.io
+volumeBindingMode: WaitForFirstConsumer
