fixed path to ca in raft stanza

--- a/ubuntu-utm-vms/guest/helm-values/vault.yaml
+++ b/ubuntu-utm-vms/guest/helm-values/vault.yaml
@@ -862,7 +862,7 @@ server:
           cluster_address = "[::]:8201"
           tls_cert_file = "/vault/userconfig/vault-ha-tls/vault.crt"
           tls_key_file  = "/vault/userconfig/vault-ha-tls/vault.key"
-          tls_client_ca_file = "/vault/userconfig/vault-ha-tls/vault.ca"
+          tls_client_ca_file = "/etc/ssl/certs/vault.ca"
         }
 
         storage "raft" {
