kes is working with cluster role, binding and kubernetes auth config

--- a/ubuntu-utm-vms/guest/helm-values/vault.yaml
+++ b/ubuntu-utm-vms/guest/helm-values/vault.yaml
@@ -140,7 +140,7 @@ injector:
 
   # Configures the log verbosity of the injector.
   # Supported log levels include: trace, debug, info, warn, error
-  logLevel: "info"
+  logLevel: "trace"
 
   # Configures the log format of the injector. Supported log formats: "standard", "json".
   logFormat: "standard"
@@ -881,10 +881,10 @@ server:
   # Kubernetes tokens.
   serviceAccount:
     # Specifies whether a service account should be created
-    create: true
+    create: false
     # The name of the service account to use.
     # If not set and create is true, a name is generated using the fullname template
-    name: ""
+    name: "vault-sa"
     # Create a Secret API object to store a non-expiring token for the service account.
     # Prior to v1.24.0, Kubernetes used to generate this secret for each service account by default.
     # Kubernetes now recommends using short-lived tokens from the TokenRequest API or projected volumes instead if possible.
