branch out runbooks to prove slightly different approaches. fixed kubernetes host path and path to ca.

--- a/ubuntu-utm-vms/guest/manifests/static/secret-mounting-pod.yaml
+++ b/ubuntu-utm-vms/guest/manifests/static/secret-mounting-pod.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   serviceAccountName: my-apps-sa
   containers:
-  - image: jweissig/app:0.0.1
+  - image: jweissig/myapp:local
     name: webapp
     volumeMounts:
     - name: secrets-store-inline
