only 1 default sc. added manifests for storage pool and sc.

--- a/multipass/helm-values/airflow.yaml
+++ b/multipass/helm-values/airflow.yaml
@@ -2,6 +2,7 @@ config:
   api:
     workers: 1
 dags:
+  storageClassName: apps-hostpath-provisioner
   mountPath: /airflow/dags/
 webserver:
   enabled: true
