use kubevirt hostlocal provisioner, document upgrade steps.

--- a/multipass/guest/manifests/hostpath-sc.yaml
+++ b/multipass/guest/manifests/hostpath-sc.yaml
@@ -8,4 +8,4 @@ provisioner: kubevirt.io.hostpath-provisioner
 reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
 parameters:
-  storagePool: local
+  storagePool: local-gp
